--- a/src/scss/WhatsAppButton.scss
+++ b/src/scss/WhatsAppButton.scss
@@ -16,7 +16,7 @@
 .whatsapp-float {
   position: fixed;
   bottom: 2.5rem;
-  right: 2.5rem;
+  left: 2.5rem;
   z-index: 100;
   background: #25D366;
   color: #fff;
@@ -53,7 +53,7 @@
 @media (max-width: 768px) {
   .whatsapp-float {
     bottom: 1.5rem;
-    right: 1.5rem;
+    left: 1.5rem;
     width: 60px;
     height: 60px;
   }
